--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,5 +6,19 @@
     android:layout_height="match_parent"
     android:background="@drawable/login_page_background"
     tools:context=".ui.Login">
+    
+    <ImageView
+        android:layout_width="186dp"
+        android:layout_height="167dp"
+        android:src="@drawable/login_logo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="85dp"
+        android:id="@+id/Login_Logo"
+        />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:text="Login to your account"
+/>
 </RelativeLayout>
