--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,5 +20,6 @@
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:text="Login to your account"
+        android:layout_below="@+id/Login_Logo"
 />
 </RelativeLayout>
