--- a/app/src/main/res/layout/activity_registration_from.xml
+++ b/app/src/main/res/layout/activity_registration_from.xml
@@ -37,10 +37,8 @@
          android:hint="Full Name"
          android:textColorHint="#61000000"
          android:textColor="#61000000"
-         android:text="Full Name"
          android:textSize="14dp"
          android:paddingStart="15dp"
-         android:paddingTop="14dp"
          />
 
      <EditText
@@ -55,10 +53,8 @@
          android:hint="Phone Number"
          android:textColorHint="#61000000"
          android:textColor="#61000000"
-         android:text="Phone Number"
          android:textSize="14dp"
          android:paddingStart="15dp"
-         android:paddingTop="14dp"
          />
 
      <EditText
@@ -73,10 +69,8 @@
          android:hint="Email Address"
          android:textColorHint="#61000000"
          android:textColor="#61000000"
-         android:text="Address"
          android:textSize="14dp"
          android:paddingStart="15dp"
-         android:paddingTop="14dp"
          />
 
      <EditText
@@ -91,25 +85,30 @@
          android:hint="Password"
          android:textColorHint="#61000000"
          android:textColor="#61000000"
-         android:text="Password"
          android:textSize="14dp"
          android:paddingStart="15dp"
-         android:paddingTop="14dp"
          />
 
 
-     <com.qandeelabbassi.dropsy.DropDownView
+     <com.skydoves.powerspinner.PowerSpinnerView
          android:layout_width="139dp"
-         android:layout_height="wrap_content"
+         android:layout_height="44dp"
          android:layout_below="@+id/edittext_pass_word"
          android:layout_marginStart="26dp"
          android:layout_marginTop="14dp"
          android:layout_marginEnd="195dp"
          android:background="@drawable/custom_edit_text"
-         app:dropsyLabel="State"
-         app:dropsyLabelColor="#61000000"
-         app:dropsyItems="@array/dropdown_items"
-
+         android:hint="State"
+         android:textColorHint="#61000000"
+         android:textColor="#61000000"
+         android:textSize="14dp"
+         app:spinner_item_height="46dp"
+         android:paddingStart="15dp"
+         android:gravity="center_vertical"
+         app:spinner_item_array="@array/dropdown_items"
+         app:spinner_arrow_show="true"
+         app:spinner_divider_color="@color/black"
+         app:spinner_arrow_tint="@color/black"
          />
 
 
