--- a/app/src/main/res/layout/activity_registration_from.xml
+++ b/app/src/main/res/layout/activity_registration_from.xml
@@ -94,10 +94,11 @@
          android:layout_width="139dp"
          android:layout_height="44dp"
          android:layout_below="@+id/edittext_pass_word"
+         android:id="@+id/State_DropDown"
          android:layout_marginStart="26dp"
          android:layout_marginTop="14dp"
          android:layout_marginEnd="195dp"
-         android:background="@drawable/custom_edit_text"
+         android:background="@color/white"
          android:hint="State"
          android:textColorHint="#61000000"
          android:textColor="#61000000"
@@ -105,10 +106,85 @@
          app:spinner_item_height="46dp"
          android:paddingStart="15dp"
          android:gravity="center_vertical"
-         app:spinner_item_array="@array/dropdown_items"
+         app:spinner_item_array="@array/dropdown_State"
          app:spinner_arrow_show="true"
+         app:spinner_popup_max_height="120dp"
          app:spinner_divider_color="@color/black"
          app:spinner_arrow_tint="@color/black"
+         app:spinner_popup_animation="bounce"
+         />
+
+     <com.skydoves.powerspinner.PowerSpinnerView
+         android:layout_width="139dp"
+         android:layout_height="44dp"
+         android:layout_below="@+id/edittext_pass_word"
+         android:id="@+id/District_DropDown"
+         android:layout_marginTop="14dp"
+         android:layout_alignParentEnd="true"
+         android:layout_marginEnd="26dp"
+         android:background="@color/white"
+         android:hint="State"
+         android:textColorHint="#61000000"
+         android:textColor="#61000000"
+         android:textSize="14dp"
+         app:spinner_item_height="46dp"
+         android:paddingStart="15dp"
+         android:gravity="center_vertical"
+         app:spinner_item_array="@array/dropdown_District"
+         app:spinner_arrow_show="true"
+         app:spinner_popup_max_height="120dp"
+         app:spinner_divider_color="@color/black"
+         app:spinner_arrow_tint="@color/black"
+         app:spinner_popup_animation="bounce"
+         />
+
+     <EditText
+         android:layout_width="match_parent"
+         android:layout_height="43dp"
+         android:background="@drawable/custom_edit_text"
+         android:layout_below="@id/State_DropDown"
+         android:layout_marginTop="14dp"
+         android:layout_marginStart="26dp"
+         android:layout_marginEnd="26dp"
+         android:hint="City"
+         android:paddingStart="15dp"
+         android:textColorHint="#61000000"
+         android:textColor="#61000000"
+         android:id="@+id/Edittext_City"
+         />
+
+     <com.skydoves.powerspinner.PowerSpinnerView
+         android:layout_width="match_parent"
+         android:layout_height="44dp"
+         android:layout_below="@+id/Edittext_City"
+         android:id="@+id/Type_DropDown"
+         android:layout_marginTop="14dp"
+         android:layout_marginStart="26dp"
+         android:layout_marginEnd="26dp"
+         android:background="@color/white"
+         android:hint="Type"
+         android:textColorHint="#61000000"
+         android:textColor="#61000000"
+         android:textSize="14dp"
+         app:spinner_item_height="46dp"
+         android:paddingStart="15dp"
+         android:gravity="center_vertical"
+         app:spinner_item_array="@array/Type"
+         app:spinner_arrow_show="true"
+         app:spinner_popup_max_height="120dp"
+         app:spinner_divider_color="@color/black"
+         app:spinner_arrow_tint="@color/black"
+         app:spinner_popup_animation="bounce"
+         />
+
+     <CheckBox
+         android:layout_width="wrap_content"
+         android:layout_height="40dp"
+         android:layout_below="@id/Type_DropDown"
+         android:text="I accpet Terms and Condition..!"
+         android:layout_centerHorizontal="true"
+         android:layout_marginTop="14dp"
+         android:textColor="@color/white"
          />
 
 
