--- a/app/src/main/res/layout/activity_registration_from.xml
+++ b/app/src/main/res/layout/activity_registration_from.xml
@@ -175,7 +175,6 @@
          app:spinner_popup_max_height="120dp"
          app:spinner_divider_color="@color/black"
          app:spinner_arrow_tint="@color/black"
-         app:spinner_popup_animation="bounce"
          />
 
      <CheckBox
@@ -197,6 +196,7 @@
          android:layout_centerHorizontal="true"
          android:text="Send OTP"
          android:textColor="@color/black"
+         android:id="@+id/send_OTP_btn"
          android:fontFamily="@font/ibarra_real_nova"
          android:textAllCaps="false"
          android:textSize="20dp"
