--- a/app/src/main/res/layout/activity_registration_from.xml
+++ b/app/src/main/res/layout/activity_registration_from.xml
@@ -39,6 +39,7 @@
          android:textColor="#61000000"
          android:textSize="14dp"
          android:paddingStart="15dp"
+         android:singleLine="true"
          />
 
      <EditText
@@ -56,6 +57,7 @@
          android:textColor="#61000000"
          android:textSize="14dp"
          android:paddingStart="15dp"
+         android:singleLine="true"
          />
 
      <EditText
@@ -72,6 +74,7 @@
          android:textColor="#61000000"
          android:textSize="14dp"
          android:paddingStart="15dp"
+         android:singleLine="true"
          />
 
      <EditText
@@ -88,6 +91,7 @@
          android:textColor="#61000000"
          android:textSize="14dp"
          android:paddingStart="15dp"
+         android:singleLine="true"
          />
 
 
@@ -112,7 +116,6 @@
          app:spinner_popup_max_height="120dp"
          app:spinner_divider_color="@color/black"
          app:spinner_arrow_tint="@color/black"
-         app:spinner_popup_animation="bounce"
          />
 
      <com.skydoves.powerspinner.PowerSpinnerView
@@ -136,7 +139,6 @@
          app:spinner_popup_max_height="120dp"
          app:spinner_divider_color="@color/black"
          app:spinner_arrow_tint="@color/black"
-         app:spinner_popup_animation="bounce"
          />
 
      <EditText
@@ -152,6 +154,7 @@
          android:textColorHint="#61000000"
          android:textColor="#61000000"
          android:id="@+id/Edittext_City"
+         android:singleLine="true"
          />
 
      <com.skydoves.powerspinner.PowerSpinnerView
