--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -7,14 +7,25 @@
     tools:context=".ui.ForgetPassword"
     android:background="@drawable/frogetpassword">
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/forgetpassword_backbutton"
+        android:layout_width="36dp"
+        android:layout_height="26dp"
+        android:background="@drawable/baseline_arrow_back_24"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="12dp"
+        />
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/foget_password_email"
+        android:visibility="visible"
         >
-        
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_width=""
-            android:layout_height=""
+
+
 
     </RelativeLayout>
 
