--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/frogetpassword">
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/forgetpassword_backbutton"
+        android:id="@+id/forgetpassword_btn"
         android:layout_width="36dp"
         android:layout_height="26dp"
         android:background="@drawable/baseline_arrow_back_24"
@@ -24,9 +24,80 @@
         android:id="@+id/foget_password_email"
         android:visibility="visible"
         >
+        
+        <ImageView
+            android:layout_width="71dp"
+            android:layout_height="93dp"
+            android:src="@drawable/froget_password_icon"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="159dp"
+            android:layout_marginStart="200dp"
+            android:layout_marginEnd="145dp"
+            android:id="@+id/image_view_forgeticon"
+            />
 
+        <TextView
+            android:id="@+id/FORGET_PASSWORD_TEXT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="FORGET\nPASSWORD"
+            android:textAlignment="center"
+            android:textColor="#00B5FF"
+            android:textSize="30dp"
+            android:fontFamily="@font/coda"
+            android:layout_below="@id/image_view_forgeticon"
+            android:layout_marginTop="24dp"
+            android:layout_centerHorizontal="true"
+            />
 
+        <TextView
+            android:id="@+id/Provide_your_accounts_email_for_which"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Provide your account’s email for which/n you want to reset your password! "
+            android:textAlignment="center"
+            android:textColor="#80000000"
+            android:textSize="20dp"
+            android:fontFamily="@font/ibarra_real_nova"
+            android:layout_below="@id/FORGET_PASSWORD_TEXT"
+            android:layout_centerHorizontal="true"
+            />
 
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginStart="26dp"
+            android:layout_marginEnd="26dp"
+            android:background="@drawable/custom_edit_text"
+            android:backgroundTint="#00AFEF"
+            android:id="@+id/edittext_fogetpassword_email_adrs"
+            android:layout_below="@+id/Provide_your_accounts_email_for_which"
+            android:layout_marginTop="38dp"
+            android:hint="Email Address "
+            android:textColorHint="#ffffff"
+            android:textColor="#ffffff"
+            android:textSize="14dp"
+            android:paddingStart="15dp"
+            android:singleLine="true"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:id="@+id/next_forget_password_text"
+            android:layout_below="@id/edittext_fogetpassword_email_adrs"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="26dp"
+            android:layout_marginEnd="26dp"
+            android:text="Next"
+            android:textAllCaps="false"
+            android:fontFamily="@font/ibarra_real_nova"
+            android:textSize="20dp"
+            android:background="@drawable/custom_shape_btn"
+            />
+        
     </RelativeLayout>
+    
+    
 
 </RelativeLayout>
