--- a/app/src/main/res/layout/activity_otp_verification.xml
+++ b/app/src/main/res/layout/activity_otp_verification.xml
@@ -11,8 +11,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="36dp"
-        android:layout_height="26dp"
-        android:background=""
+        android:layout_height="26dp"/>
 
 
 </RelativeLayout>
