--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -80,23 +80,22 @@
         />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/login_btn"
         android:layout_width="191dp"
         android:layout_height="40dp"
-        android:id="@+id/login_btn"
         android:layout_below="@+id/forget_password_login"
-        android:background="@drawable/custom_shape_btn"
-        android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/custom_shape_btn"
+        android:drawableEnd="@drawable/baseline_login_24"
+        android:drawablePadding="2dp"
+        android:fontFamily="@font/ibarra_real_nova"
+        android:gravity="end|center_vertical"
+        android:paddingEnd="50dp"
         android:text="Login"
         android:textAllCaps="false"
-        android:fontFamily="@font/ibarra_real_nova"
         android:textSize="20dp"
-        android:drawableEnd="@drawable/baseline_login_24"
-        android:paddingEnd="50dp"
-        android:gravity="end|center_vertical"
-        android:textStyle="bold"
-        android:drawablePadding="2dp"
-        />
+        android:textStyle="bold" />
     
     <TextView
         android:layout_width="wrap_content"
