--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="Primary_less">#00B5FF</color>
     <color name="Secondary">#E68CC8FF</color>
     <color name="Secondary_less">#C6E4FF</color>
+    <color name="Purple">#7745A9</color>
+
 </resources>
