--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/foget_password_email"
-        android:visibility="visible"
+        android:visibility="gone"
         >
         
         <ImageView
@@ -95,9 +95,158 @@
             android:textSize="20dp"
             android:background="@drawable/custom_shape_btn"
             />
-        
+
     </RelativeLayout>
-    
-    
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/FORGET_PASSWORD_SELECTION"
+        android:visibility="visible"
+        >
+
+        <TextView
+            android:id="@+id/MAKE_SELECTION_TEXT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="MAKE\nSELECTION"
+            android:textColor="#00B5FF"
+            android:textSize="@dimen/_30sdp"
+            android:fontFamily="@font/coda"
+            android:layout_marginTop="@dimen/_102sdp"
+            android:layout_marginStart="@dimen/_7sdp"
+            />
+
+
+        <TextView
+            android:id="@+id/Select_which_contact_detail_should_we"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select which contact detail should we/n use to reset your password? "
+            android:textAlignment="center"
+            android:textColor="#80000000"
+            android:textSize="@dimen/_20sdp"
+            android:fontFamily="@font/ibarra_real_nova"
+            android:layout_below="@id/MAKE_SELECTION_TEXT"
+            android:layout_centerHorizontal="true"
+            />
+
+        <RelativeLayout
+            android:id="@+id/via_msg_makeselection"
+            android:layout_width="@dimen/_343sdp"
+            android:layout_height="@dimen/_110sdp"
+            android:background="@drawable/cutom_big_shape"
+            android:backgroundTint="#C6E4FF"
+            android:layout_marginTop="@dimen/_258sdp"
+            android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginEnd="@dimen/_9sdp"
+            android:layout_centerHorizontal="true"
+
+            >
+            <TextView
+                android:id="@+id/via_msg_makeselectiontext"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="via sms:"
+                android:textAllCaps="false"
+                android:textSize="@dimen/_17sdp"
+                android:textColor="#99000000"
+                android:layout_marginTop="@dimen/_30sdp"
+                android:layout_marginStart="@dimen/_68sdp"
+                />
+
+            <TextView
+                android:id="@+id/via_msg_makeselection_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/via_msg_makeselectiontext"
+                android:layout_marginStart="@dimen/_68sdp"
+                android:layout_marginTop="@dimen/_3sdp"
+                android:fontFamily="@font/roboto_medium"
+                android:text="+917095966526:"
+                android:textAllCaps="false"
+                android:textColor="#99000000"
+                android:textSize="@dimen/_18sdp" />
+
+            <ImageView
+                android:layout_width="@dimen/_71sdp"
+                android:layout_height="@dimen/_93sdp"
+                android:src="@drawable/baseline_phone_android_24"
+                android:layout_marginStart="@dimen/_3sdp"
+                android:layout_marginEnd="@dimen/_16sdp"
+                android:layout_marginTop="@dimen/_30sdp"
+                android:layout_marginBottom="@dimen/_31sdp"
+                android:id="@+id/via_msg_makeselection_img"
+
+                />
+
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:id="@+id/email_msg_makeselection"
+            android:layout_width="@dimen/_343sdp"
+            android:layout_height="@dimen/_110sdp"
+            android:background="@drawable/cutom_big_shape"
+            android:backgroundTint="#C6E4FF"
+            android:layout_marginTop="@dimen/_18sdp"
+            android:layout_below="@id/via_msg_makeselection"
+            android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginEnd="@dimen/_9sdp"
+            android:layout_centerHorizontal="true"
+
+            >
+            <TextView
+                android:id="@+id/email_msg_makeselectiontext"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="via email:"
+                android:textAllCaps="false"
+                android:textSize="@dimen/_17sdp"
+                android:textColor="#99000000"
+                android:layout_marginTop="@dimen/_36sdp"
+                android:layout_marginStart="@dimen/_68sdp"
+                />
+
+            <TextView
+                android:id="@+id/via_email_makeselection_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/email_msg_makeselectiontext"
+                android:layout_marginStart="@dimen/_68sdp"
+                android:layout_marginTop="@dimen/_3sdp"
+                android:fontFamily="@font/roboto_medium"
+                android:text="Paradoxcodee@gmail.com"
+                android:textAllCaps="false"
+                android:textColor="#99000000"
+                android:textSize="@dimen/_18sdp" />
+
+            <ImageView
+                android:layout_width="@dimen/_43sdp"
+                android:layout_height="@dimen/_50sdp"
+                android:src="@drawable/baseline_mail_outline_24"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_37sdp"
+                android:layout_marginBottom="@dimen/_25sdp"
+                android:id="@+id/via_email_makeselection_img"
+
+                />
+
+
+
+
+
+
+
+
+        </RelativeLayout>
+
+
+    </RelativeLayout>
+
+
+
+
 
 </RelativeLayout>
