--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,22 +8,22 @@
     tools:context=".ui.Login">
     
     <ImageView
-        android:layout_width="186dp"
-        android:layout_height="167dp"
+        android:layout_width="@dimen/_186sdp"
+        android:layout_height="@dimen/_167sdp"
         android:src="@drawable/login_logo"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="@dimen/_85sdp"
         android:id="@+id/Login_Logo"
         />
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/_40sdp"
         android:text="Login to your account"
         android:layout_below="@+id/Login_Logo"
         android:layout_centerHorizontal="true"
         android:fontFamily="@font/ibarra_real_nova"
-        android:textSize="24dp"
+        android:textSize="@dimen/_24sdp"
         android:textColor="@color/black"
         android:id="@+id/logintext"
         />
@@ -31,42 +31,42 @@
     <EditText
         android:id="@+id/edittext_user_name"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="@dimen/_45sdp"
         android:background="@drawable/custom_edit_text"
         android:backgroundTint="@color/Primary"
         android:layout_below="@+id/logintext"
-        android:layout_marginStart="19dp"
-        android:layout_marginEnd="19dp"
-        android:layout_marginTop="23dp"
+        android:layout_marginStart="@dimen/_19sdp"
+        android:layout_marginEnd="@dimen/_19sdp"
+        android:layout_marginTop="@dimen/_23sdp"
         android:hint="Username"
         android:textColorHint="@color/white"
-        android:textSize="15dp"
-        android:paddingStart="15dp"
+        android:textSize="@dimen/_15sdp"
+        android:paddingStart="@dimen/_15sdp"
         android:textColor="@color/white"
         android:drawableStart="@drawable/personicon"
         android:singleLine="true"
-        android:drawablePadding="5dp"
+        android:drawablePadding="@dimen/_15sdp"
         />
 
 
     <EditText
         android:id="@+id/edittext_login_password"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="@dimen/_45sdp"
         android:background="@drawable/custom_edit_text"
         android:backgroundTint="@color/Primary"
         android:layout_below="@+id/edittext_user_name"
-        android:layout_marginStart="19dp"
-        android:layout_marginEnd="19dp"
-        android:layout_marginTop="23dp"
+        android:layout_marginStart="@dimen/_19sdp"
+        android:layout_marginEnd="@dimen/_19sdp"
+        android:layout_marginTop="@dimen/_23sdp"
         android:hint="Password"
         android:textColorHint="@color/white"
-        android:textSize="15dp"
-        android:paddingStart="15dp"
+        android:textSize="@dimen/_15sdp"
+        android:paddingStart="@dimen/_15sdp"
         android:textColor="@color/white"
         android:drawableStart="@drawable/vector"
         android:singleLine="true"
-        android:drawablePadding="5dp" />
+        android:drawablePadding="@dimen/_5sdp" />
 
     <TextView
         android:id="@+id/forget_password_login"
@@ -74,27 +74,27 @@
         android:layout_height="wrap_content"
         android:text="@string/Forget_password"
         android:textColor="@color/Primary_less"
-        android:textSize="14dp"
+        android:textSize="@dimen/_14sdp"
         android:layout_below="@+id/edittext_login_password"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="@dimen/_28sdp"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="14dp"
+        android:layout_marginEnd="@dimen/_14sdp"
         />
 
-    q<androidx.appcompat.widget.AppCompatButton
-        android:layout_width="191dp"
-        android:layout_height="40dp"
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="@dimen/_191sdp"
+        android:layout_height="@dimen/_40sdp"
         android:id="@+id/login_btn"
         android:layout_below="@+id/forget_password_login"
         android:background="@drawable/custom_shape_btn"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="@dimen/_30sdp"
         android:layout_centerHorizontal="true"
         android:text="Login"
         android:textAllCaps="false"
         android:fontFamily="@font/ibarra_real_nova"
-        android:textSize="20dp"
+        android:textSize="@dimen/_20sdp"
         android:drawableEnd="@drawable/baseline_login_24"
-        android:paddingEnd="50dp"
+        android:paddingEnd="@dimen/_50sdp"
         android:gravity="end|center_vertical"
         android:textStyle="bold"
         android:drawablePadding="2dp"
@@ -103,12 +103,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12dp"
+        android:textSize="@dimen/_12sdp"
         android:text="Don't have an account?"
         android:id="@+id/dont_have_account_login"
         android:layout_below="@id/login_btn"
-        android:layout_marginTop="33dp"
-        android:layout_marginStart="90dp"/>
+        android:layout_marginTop="@dimen/_33sdp"
+        android:layout_marginStart="@dimen/_90sdp"/>
 
     <TextView
         android:id="@+id/register_an_account_login"
@@ -116,9 +116,9 @@
         android:layout_height="wrap_content"
         android:text="@string/Register_an_account"
         android:textColor="@color/Primary_less"
-        android:textSize="14dp"
+        android:textSize="@dimen/_14sdp"
         android:layout_below="@+id/login_btn"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="@dimen/_30sdp"
         android:layout_toEndOf="@id/dont_have_account_login"
         />
 
